fixed dt alignment in dl

--- a/src/lists.less
+++ b/src/lists.less
@@ -39,7 +39,6 @@ dl.custom {
   margin-top: 5px;
   dt {
     margin-left: -@list-margin;
-    margin-top: 5px;
     float: left;
     width: ~'calc(10% + @{list-margin})';
   }
